--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       </section>
       <section class="header-container-bottom">
         <p class="logo-base">
-          <img src="img/Cat.png" alt="gato" />
+          <img src="Img/Cat.png" alt="gato" />
           <span class="logo-first">Front</span>
           Cat&Dog
-          <img src="img/Dog.png" alt="perro" />
+          <img src="Img/Dog.png" alt="perro" />
         </p>
         <nav>
           <ul class="nav-links">
@@ -86,10 +86,10 @@
 
      
         <p class="logo-base">
-          <img src="img/Cat.png" alt="gato" />
+          <img src="Img/Cat.png" alt="gato" />
           <span class="logo-last1">Front</span>
            <span class="logo-last2">Cat&Dog</span>
-          <img src="img/Dog.png" alt="perro" />
+          <img src="Img/Dog.png" alt="perro" />
         </p>
         <p class="p-vacio"></p>
         
